--- a/athenaSummit1/Makeoptions.in
+++ b/athenaSummit1/Makeoptions.in
@@ -110,12 +110,9 @@ ifeq ($(MACHINE),macosx)
 	FFTWINC = -I/opt/local/include
 else
 ifeq ($(MACHINE),summit)
-	#CC = mpiicc
-	#LDR = mpiicc
-	#OPT = -O3 -xCORE-AVX2 -ipo
-	CC = mpicc
-	LDR = mpicc
-	OPT = -O3
+	CC = mpiicc
+	LDR = mpiicc
+	OPT = -O3 -xCORE-AVX2 -ipo
 	MPIINC =
 	MPILIB =
 	FFTWLIB =
